--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A lightweight unique id generator",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "./node_modules/.bin/eslint *.js",
+    "lint-fix": "./node_modules/.bin/eslint *.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,7 @@
   },
   "homepage": "https://github.com/Kailash-Sankar/uq-id#readme",
   "devDependencies": {
+    "eslint": "^6.8.0",
     "jest": "^25.4.0"
   }
 }
